== Version 2.6.10 Work in progress (not released -- this is a draft) ==

  TODO: compile .po (creme_config, persons, activities, emails)

  Users side :
  ------------
    # Apps :
        * Emails :
            - The help text for signatures' images has been improved.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The method 'creme_core.utils.CremeDiscoverRunner.setup_databases()' has been updated to prevent running
          the 'creme_populate' command on the default test database when the test suite is launched in
          parallel mode. This change is done to prevent cache leaking when the test processes are forked.
          This is a backport from Creme '2.7'.
        # Fix EnumerableModelChoiceField handling of callable model field default (ModelField._get_default is a PROPERTY and should not be called)

== Version 2.6.9 ==

  Users side :
  ------------
    # An loading issue (with the lib 'cryptography'), which caused crash at
      start-up in some environments, has been fixed.
    # The 'populate' scripts could failed on menu configuration in some cases.
    # There was issue when a FileRef is creating when a CremeModel is deleted:
      the path could be too long to be stored by the FileRef, which caused an error.


== Version 2.6.8 ==

  Users side :
  ------------
    # The render of history lines on TextFields (like "description") with line breaks has been improved.
    # Apps :
        * Opportunities :
            - Unsetting the current Quote was not possible if you did not create the relationship yourself.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The creation forms for HeaderFilter & EntityFilter now accept models with digits at the end of their name.
        # Fix conversion issues in creme.widgets.CheckListSelect when json datatype is enabled.
        # Apps :
            * Billing :